# dioxus-showcase

./: .gitignore  .vercelignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: tailwind.css
assets/logos/: bionic-gpt-logo.avif  biyard-logo.avif  floneum-logo.avif  freya-logo.avif  hemi-logo.avif  linkecho-logo.avif
assets/styling/: main.css
src/: main.rs
src/components/: footer.rs  header.rs  hero.rs  mod.rs  showcase_card.rs
